k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lifetracker-backend
  labels:
    app: lifetracker-backend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 4000
    protocol: TCP
    name: http
  selector:
    app: lifetracker-backend
